<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/menu_overview" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_opinion"
            android:icon="@drawable/ic_menu_opinion"
            android:title="@string/menu_opinion" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_menu_sport"
            android:title="@string/menu_sport" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_menu_culture"
            android:title="@string/menu_culture" />
        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/ic_menu_lifestyle"
            android:title="@string/menu_lifestyle" />
    </group>

</menu>
